--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -47,7 +47,7 @@
 	\acro{SVD}{Singular Value Decomposition}
 	\acro{PCA}{Principal Component Analysis}
 	\acro{LDA}{Linear Discriminant Analysis}
-	\acro{KL}[K-L]{Kullback–Leibler}
+	\acro{KL}[KL]{Kullback–Leibler}
 	\acro{IG}{Information Gain}
 	
 	% Mathematics & Optimization
@@ -66,8 +66,13 @@
 	\acro{BPTT}{Backpropagation through time}
 	\acro{RNN}{Recurrent Neural Network}
 	\acro{CNN}{Convolutional Neural Network}
+	\acro{CONV}{Convolutional}
+	\acro{FC}{Fully Connected}
 	\acro{VAE}{Variational Auto-Encoders}
 	\acro{GAN}{Generative Adversarial Network}
+	\acro{DCGAN}{Deep Convolutional Generative Adversarial Network}
+	\acro{CGAN}{Conditional Generative Adversarial Network}
+	\acro{ResNet}{Residual Network}	
 	
 	% Probabilistic Robotics
 	\acro{KF}{Kalman Filter}
