--- a/Contents/meta-learning.tex
+++ b/Contents/meta-learning.tex
@@ -1,6 +1,29 @@
 % !TeX spellcheck = en_US
 \chapter{Meta-Learning}
 
+\section{Scaffolding}
+\textit{Scaffolding} is a term that commonly used in the construction field, but also has a relation to infant's learning process. Scaffolding is a temporary structure that supports the construction, maintenance of a large building \href{https://en.wikipedia.org/wiki/Scaffolding}{(wiki)}. In the context of learning, it implies the structured assistance, or guidance, for better accomplishment of new skills and tasks. As the learner's \textit{autonomy} (learning abilities) increases, the support decrease accordingly . \cite{parentlab2019ccaffolding, zaadnoordijk2020next}
+
+\begin{figure}[hbt!]
+	\centering
+	\includegraphics[width=.5\textwidth]{scaffolding.jpeg}
+	\caption{Scaffolding in construction.}
+\end{figure}
+
+Extending the idea behind scaffolding to \ac{ML} and \ac{RL}: \cite{zaadnoordijk2020next}
+\begin{itemize}
+	\item Visual imitation learning \cite{finn2017one, sharma2019third}
+	\item Learning from demonstration \todo{}
+	\item Collective learning: learn from / guided by other agents
+	\item Active learning
+\end{itemize}
+
+\todo{Read \cite{soltoggio2018born, arandjelovic2017look, barros2019expectation}}
+
+\todo{Read \href{https://www.deepmind.com/publications/a-generalist-agent}{A Generalist Agent}}
+
+\todo{Read \href{https://research.facebook.com/publications/control-strategies-for-physically-simulated-characters-performing-two-player-competitive-sports/}{meta}}
+
 \section{Learning Resource}
 \begin{itemize}
 	\item \href{https://youtu.be/ByeRnmHJ-uk}{Learning to learn: An Introduction to Meta Learning || \ac{ICML} 2019}
