--- a/Contents/rl-overview.tex
+++ b/Contents/rl-overview.tex
@@ -34,7 +34,7 @@ A \ac{RL} problem has 3 major blocks as follows:
 
 \section{Terminology \& Notation}
 \begin{itemize}
-	\item Check out \ac{MDP} and \ac{POMDP} in the \href{robotics.pdf}{robotic notes}.
+	\item Check out \ac{MDP} and \ac{POMDP} in the \href{robotics.pdf}{robotic notes} or the \ac{RL} book by \citeaus{sutton2018reinforcement}.
 	\item $\textbf{s}_t$ - state
 	\item $\textbf{o}_t$ - observation
 	\item $\textbf{a}_t$ - action
