--- a/RL_notes.tex
+++ b/RL_notes.tex
@@ -39,7 +39,8 @@ fleqn
 	\include{Contents/offline-rl.tex}
 	\include{Contents/inverse-rl.tex}
 	\include{Contents/transfer-and-multitask-learning.tex}
-	\include{Contents/meta-learning.tex}	
+	\include{Contents/meta-learning.tex}
+	\include{Contents/continual-learning.tex}
 	\include{Contents/rl-challenges-open-probs.tex}
 	
 	\backmatter
