--- a/learning-notes.sty
+++ b/learning-notes.sty
@@ -44,7 +44,7 @@
 \clubpenalty 	= 1000 	  % orphan child
 \widowpenalty 	= 1000 	% Widow
 
-\RequirePackage{multicol}		% Multi columns
+\RequirePackage{multicol}		% Multi-columns
 % --------------------------------------------------------------------------
 %	Line spacing, header and footer
 % --------------------------------------------------------------------------
@@ -92,7 +92,7 @@ belowskip		= 2pt,
 \renewcommand\CancelColor{\color{red}}
 \RequirePackage{empheq}					% Boxed equations
 \newcommand*\widefbox[1]{\fbox{\hspace{2em}#1\hspace{2em}}}
-
+\RequirePackage{pythonhighlight}			% Python code listing
 % --------------------------------------------------------------------------
 %	Bibliopraphy
 % --------------------------------------------------------------------------
