--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -7,6 +7,7 @@
 
 @STRING{arso	= {Proc.~of the IEEE Workshop on Advanced Robotics and its Social Impacts (ARSO)} }
 @STRING{cvpr    = {Proc.~of the IEEE/CVF Int.~Conf.~on Computer Vision and Pattern Recognition (CVPR)} }
+@STRING{iccv    = {Proc.~of the IEEE Int.~Conf.~on Computer Vision (ICCV)} }
 @STRING{flairs	 = {Proc.~of the Int.~Conf.~of Florida Artificial Intelligence Research Society (FLAIRS)} }
 @STRING{icml	= {Proc.~of the Int.~Conf.~on Machine Learning (ICML} }
 @STRING{icar    = {Proc.~of the Int.~Conf.~on Advanced Robotics (ICAR)} }
@@ -658,7 +659,7 @@
 	year={2006}
 }
 @article{goodfellow2014generative,
-	title={Generative adversarial nets},
+	title={Generative Adversarial Nets},
 	author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
 	journal=NeurIPS,
 	volume={27},
@@ -1016,4 +1017,174 @@
 	year={2013},
 	publisher={IEEE}
 }
+@article{arulkumaran2017deep,
+	title={Deep reinforcement learning: A brief survey},
+	author={Arulkumaran, Kai and Deisenroth, Marc Peter and Brundage, Miles and Bharath, Anil Anthony},
+	journal={IEEE Signal Processing Magazine},
+	volume={34},
+	number={6},
+	pages={26--38},
+	year={2017},
+	publisher={IEEE}
+}
+@article{li2017deep,
+	title={Deep reinforcement learning: An overview},
+	author={Li, Yuxi},
+	journal={arXiv preprint arXiv:1701.07274},
+	year={2017}
+}
+@article{kober2013reinforcement,
+	title={Reinforcement learning in robotics: A survey},
+	author={Kober, Jens and Bagnell, J Andrew and Peters, Jan},
+	journal={The International Journal of Robotics Research},
+	volume={32},
+	number={11},
+	pages={1238--1274},
+	year={2013},
+	publisher={SAGE Publications Sage UK: London, England}
+}
+@article{singh2021reinforcement,
+	title={Reinforcement learning in robotic applications: a comprehensive survey},
+	author={Singh, Bharat and Kumar, Rajesh and Singh, Vinay Pratap},
+	journal={Artificial Intelligence Review},
+	pages={1--46},
+	year={2021},
+	publisher={Springer}
+}
+@inproceedings{yahya2017collective,
+	title={Collective robot reinforcement learning with distributed asynchronous guided policy search},
+	author={Yahya, Ali and Li, Adrian and Kalakrishnan, Mrinal and Chebotar, Yevgen and Levine, Sergey},
+	booktitle={2017 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+	pages={79--86},
+	year={2017},
+	organization={IEEE}
+}
+@article{lecun1998gradient,
+	title={Gradient-based learning applied to document recognition},
+	author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+	journal={Proceedings of the IEEE},
+	volume={86},
+	number={11},
+	pages={2278--2324},
+	year={1998},
+	publisher={IEEE}
+}
+@article{krizhevsky2012imagenet,
+	title={ImageNet Classification with Deep Convolutional Neural Networks},
+	author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+	journal=NeurIPS,
+	volume={25},
+	year={2012}
+}
+@article{simonyan2014very,
+	title={Very Deep Convolutional Networks for Large-Scale Image Recognition},
+	author={Simonyan, Karen and Zisserman, Andrew},
+	journal={arXiv preprint arXiv:1409.1556},
+	year={2014}
+}
+@article{canziani2016analysis,
+	title={An analysis of deep neural network models for practical applications},
+	author={Canziani, Alfredo and Paszke, Adam and Culurciello, Eugenio},
+	journal={arXiv preprint arXiv:1605.07678},
+	year={2016}
+}
+@inproceedings{he2016deep,
+	title={Deep Residual Learning for Image Recognition},
+	author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	booktitle=cvpr,
+	pages={770--778},
+	year={2016}
+}
+@article{dumoulin2016guide,
+	title={A guide to convolution arithmetic for deep learning},
+	author={Dumoulin, Vincent and Visin, Francesco},
+	journal={arXiv preprint arXiv:1603.07285},
+	year={2016}
+}
+@inproceedings{zeiler2010deconvolutional,
+	title={Deconvolutional networks},
+	author={Zeiler, Matthew D and Krishnan, Dilip and Taylor, Graham W and Fergus, Rob},
+	booktitle={2010 IEEE Computer Society Conference on computer vision and pattern recognition},
+	pages={2528--2535},
+	year={2010},
+	organization={IEEE}
+}
+@article{radford2015unsupervised,
+	title={Unsupervised representation learning with deep convolutional generative adversarial networks},
+	author={Radford, Alec and Metz, Luke and Chintala, Soumith},
+	journal={arXiv preprint arXiv:1511.06434},
+	year={2015}
+}
+@inproceedings{zhu2017unpaired,
+	title={Unpaired image-to-image translation using cycle-consistent adversarial networks},
+	author={Zhu, Jun-Yan and Park, Taesung and Isola, Phillip and Efros, Alexei A},
+	booktitle=iccv,
+	pages={2223--2232},
+	year={2017}
+}
+@inproceedings{isola2017image,
+	title={Image-to-image translation with conditional adversarial networks},
+	author={Isola, Phillip and Zhu, Jun-Yan and Zhou, Tinghui and Efros, Alexei A},
+	booktitle=cvpr,
+	pages={1125--1134},
+	year={2017}
+}
+@inproceedings{ronneberger2015u,
+	title={U-Net: Convolutional Networks for Biomedical Image Segmentation},
+	author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+	booktitle={International Conference on Medical Image Computing and Computer-assisted Intervention},
+	pages={234--241},
+	year={2015},
+	organization={Springer}
+}
+@article{mirza2014conditional,
+	title={Conditional generative adversarial nets},
+	author={Mirza, Mehdi and Osindero, Simon},
+	journal={arXiv preprint arXiv:1411.1784},
+	year={2014}
+}
+@article{kingma2013auto,
+	title={Auto-encoding variational bayes},
+	author={Kingma, Diederik P and Welling, Max},
+	journal={arXiv preprint arXiv:1312.6114},
+	year={2013}
+}
+@article{zaadnoordijk2020next,
+	title={The next big thing(s) in unsupervised machine learning: Five lessons from infant learning},
+	author={Zaadnoordijk, Lorijn and Besold, Tarek R and Cusack, Rhodri},
+	journal={arXiv preprint arXiv:2009.08497},
+	year={2020}
+}
+@misc{parentlab2019ccaffolding,
+	title = {What is Scaffolding?},
+	howpublished = {\url{https://youtu.be/rVaRdVt6Ihw}},
+	note = {Accessed: 2022/06/30},
+	year={2019}	
+}
+@article{soltoggio2018born,
+	title={Born to learn: the inspiration, progress, and future of evolved plastic artificial neural networks},
+	author={Soltoggio, Andrea and Stanley, Kenneth O and Risi, Sebastian},
+	journal={Neural Networks},
+	volume={108},
+	pages={48--67},
+	year={2018},
+	publisher={Elsevier}
+}
+@inproceedings{arandjelovic2017look,
+	title={Look, listen and learn},
+	author={Arandjelovic, Relja and Zisserman, Andrew},
+	booktitle=iccv,
+	pages={609--617},
+	year={2017}
+}
+@article{barros2019expectation,
+	title={Expectation learning for stimulus prediction across modalities improves unisensory classification},
+	author={Barros, Pablo and Eppe, Manfred and Parisi, German I and Liu, Xun and Wermter, Stefan},
+	journal={Frontiers in Robotics and AI},
+	volume={6},
+	pages={137},
+	year={2019},
+	publisher={Frontiers Media SA}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
